Добавлена резина в index для mobile

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,41 +10,43 @@
 </head>
 
 <body class="page__body">
+  <header class="page__main-header main-header main-header--no-background">
+    <div class="main-header__header-wrap">
+      <div class="main-header__header">
+      <a class="main-header__logo-link" href="index.html">
+        <span class="visually-hidden">Логотип-картинка Кэт Энерджи</span>
+        <picture>
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-cat-desktop.svg" width="70" height="60">
+          <source media="(min-width: 768px)" type="image/svg+xml" srcset="images/logo-cat-tablet.svg" width="60" height="50">
+          <img class="main-header__logo-image" src="images/logo-cat-mobile.svg" alt="Логотип Кэт Энерджи" width="33" height="38">
+        </picture>
+        <span class="visually-hidden">Логотип-текст Кэт Энерджи</span>
+        <picture>
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-text.svg" width="118" height="21">
+          <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Кэт Энерджи" width="101" height="18">
+        </picture>
+      </a>
+      <button class="button-burger button-burger--close button-burger--nojs" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+    </div>
+    <nav class="nav nav--open">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link nav__link--catalog" href="index.html">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link nav__link--catalog nav__link-current" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link nav__link--catalog" href="#">Подбор программы</a>
+          </li>
+        </ul>
+    </nav>
+    </div>
+  </header>
   <main class="main-catalog">
     <section class="products container">
-      <header class="main-header">
-        <div class="main-header__header">
-          <a class="main-header__logo-link" href="index.html">
-            <span class="visually-hidden">Логотип-картинка Кэт Энерджи</span>
-            <picture>
-              <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-cat-desktop.svg" width="70" height="60">
-              <source media="(min-width: 768px)" type="image/svg+xml" srcset="images/logo-cat-tablet.svg" width="60" height="50">
-              <img class="main-header__logo-image" src="images/logo-cat-mobile.svg" alt="Логотип Кэт Энерджи" width="33" height="38">
-            </picture>
-            <span class="visually-hidden">Логотип-текст Кэт Энерджи</span>
-            <picture>
-              <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-text.svg" width="118" height="21">
-              <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Кэт Энерджи" width="101" height="18">
-            </picture>
-          </a>
-          <button class="button-burger button-burger--close" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-        </div>
-        <nav class="nav nav--open">
-            <ul class="nav__list">
-              <li class="nav__list-item">
-                <a class="nav__link nav__link--catalog nav__link--current" href="index.html">Главная</a>
-              </li>
-              <li class="nav__list-item">
-                <a class="nav__link nav__link--catalog" href="catalog.html">Каталог продукции</a>
-              </li>
-              <li class="nav__list-item">
-                <a class="nav__link nav__link--catalog" href="#">Подбор программы</a>
-              </li>
-            </ul>
-        </nav>
-      </header>
       <h1 class="products__title">Каталог продукции</h1>
       <ul class="products__list">
         <li class="products__item">
